Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/6910550/T6910550d.out
T6910550d.java:12:14: compiler.err.already.defined: kindname.method, <X>m(X), kindname.class, T6910550d
1 error
